--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div id="capsform">
     <form>
-      <label for="lowercase">Enter Lowercase Text Here</label>
+      <label for="lowercase">Enter lowercase rage text here</label>
       <textarea id="lowercase" class="form-control" rows="3"></textarea>
       <br>
       <br>
