change page title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/jquery-1.12.0.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="js/scripts2.js"></script>
-  <title>Mad Libs</title>
+  <title>Rage Generator</title>
 </head>
 
 <body>
